fix issue on footer gap and modal styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,15 +61,12 @@ body {
 }
 
 .progress-bar-container {
-  min-height: 200px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: center;
+  height: 200px;
+  text-align: center;
 
   > img {
     animation: zoomInAndOut 0.5s ease-in-out;
-    margin-bottom: 20px;
+    margin: 30px 0 10px;
   }
 
   > p {
