--- a/src/containers/Layout/styles.scss
+++ b/src/containers/Layout/styles.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   padding-top: 75px;
 
